out/base/backend-deployment.yaml
#! server-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: cat-chatbot
    labels:
        com.docker.compose.project: cat-chatbot
        com.docker.compose.service: backend-service
spec:
    replicas: 2
    selector:
        matchLabels:
            com.docker.compose.project: cat-chatbot
            com.docker.compose.service: backend-service
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: cat-chatbot
                com.docker.compose.service: backend-service
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: backend
                  image: samanthamorris684/catbot-backend:latest
                  imagePullPolicy: Always
                  ports:
                    - name: server-5001
                      containerPort: 5001
                  resources:
                    requests:
                      cpu: "250m"
                      memory: "1Gi"
            imagePullSecrets:
              - name: regcred
