out/base/server-deployment.yaml
#! server-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: server
    namespace: cat-chatbot
    labels:
        com.docker.compose.project: cat-chatbot
        com.docker.compose.service: server
spec:
    replicas: 2
    selector:
        matchLabels:
            com.docker.compose.project: cat-chatbot
            com.docker.compose.service: server
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: cat-chatbot
                com.docker.compose.service: server
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: server
                  image: samanthamorris684/catbot:latest
                  imagePullPolicy: Always
                  ports:
                    - name: app-3000
                      containerPort: 3000
                    - name: server-5001
                      containerPort: 5001
                  resources:
                    requests:
                      cpu: "250m"
                      memory: "1Gi"
            imagePullSecrets:
              - name: regcred
