out/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: cat-chatbot
spec:
  selector:
    com.docker.compose.project: cat-chatbot
    com.docker.compose.service: backend-service
  ports:
    - name: api
      port: 5001
      targetPort: server-5001
