out/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: cat-chatbot
spec:
  selector:
    com.docker.compose.project: cat-chatbot
    com.docker.compose.service: frontend-service
  ports:
    - name: http
      port: 80
      targetPort: app-3000
